📚 COMPREHENSIVE DOCUMENTATION UPDATE + AI Working Directories
✅ AI WORKING DIRECTORIES ADDED:
- .agent/tmp/ - Temporary working directory for AI operations
  * Session-specific working directories
  * Temporary scripts and analysis files
  * Backups and intermediate data
  * Comprehensive usage guidelines and examples
- .agent/memory/ - Persistent memory directory for AI learning
  * Session context and conversation history
  * Learned patterns and successful approaches
  * User preferences and customizations
  * Privacy-aware with security considerations

✅ AGENTS.MD MAJOR UPDATES:
- Added mandatory AI working directory usage guidelines
- Updated complete repository structure with all directories
- Enhanced agent directory structure documentation
- Added critical rules for temporary files and memory usage
- Comprehensive examples for both tmp/ and memory/ usage

✅ README.MD COMPREHENSIVE UPDATES:
- Updated repository structure with latest organization
- Added directory purposes and AI agent directories
- Updated quality metrics with industry-leading achievements:
  * 56.4% issue reduction (197+ issues resolved)
  * 31.7% technical debt reduction (805 → 550 minutes)
  * Multi-platform A-grade excellence
- Enhanced documentation for user-facing vs AI directories

✅ GITIGNORE UPDATES:
- Added .agent/tmp/* and .agent/memory/* to gitignore
- Preserved README.md files in both directories
- Ensures privacy and prevents temporary file commits

🎯 RESULT: Complete AI-ready documentation with dedicated working spaces
📁 STRUCTURE: Clear separation and guidance for AI assistant operations
🤖 AI-OPTIMIZED: Comprehensive guidance for efficient AI operations

--- a/.gitignore
+++ b/.gitignore
@@ -98,3 +98,9 @@ tmp/
 temp/
 *.tmp
 tmp.*.json
+
+# AI Assistant working directories
+.agent/tmp/*
+!.agent/tmp/README.md
+.agent/memory/*
+!.agent/memory/README.md
