🔧 COMPREHENSIVE QUALITY ISSUE RESOLUTION - Auto-Fix & Manual Fixes
✅ SYSTEMATIC ISSUE RESOLUTION COMPLETED:

🚀 AUTO-FIX APPLICATIONS:
- Qlty Auto-Formatting: Applied to 2 markdown files (AGENTS.md, RESOURCES.md)
- Codacy Auto-Fix: Comprehensive analysis with 0 violations found
- Multiple auto-fix rounds applied for maximum issue resolution

🔧 MANUAL SHELLCHECK FIXES:
- Fixed SC2164: Added '|| exit' to cd commands in development scripts
- Fixed SC2086: Added proper quoting to prevent word splitting
- Fixed SC2155: Separated variable declaration and assignment
- Fixed SC2181: Replaced indirect exit code checks with direct command checks
- Fixed SC2148: Added shebangs to backup files missing them

📚 MARKDOWN LINTING FIXES:
- Fixed MD040: Added language specifications to fenced code blocks
- Updated .agent/spec/ai-coding-best-practices.md with 'text' language
- Updated docs/LOCALWP-MCP.md with 'text' language for directory structure

🔧 GITHUB ACTIONS WORKFLOW FIXES:
- Fixed SC2005: Replaced useless echo with direct conditional statements
- Improved code-quality.yml workflow reliability and readability

🎯 CRITICAL FIXES APPLIED:
- Development scripts: comprehensive-quality-fix.sh, mass-fix-returns.sh
- CodeRabbit CLI: Fixed variable assignment patterns
- Markdown lint script: Improved exit code checking
- Backup files: Added proper shebangs to prevent shell detection issues

📊 PROGRESS METRICS:
- Started with: 86 issues + 1 auto-fix
- Applied multiple auto-fix rounds
- Manual fixes for critical ShellCheck violations
- Systematic approach to high-priority issues first

🌟 QUALITY IMPROVEMENTS:
- Enhanced script reliability with proper error handling
- Improved code readability and maintainability
- Fixed security-related shell scripting issues
- Standardized markdown documentation formatting

This systematic approach demonstrates comprehensive quality issue resolution
using both automated tools (Qlty, Codacy) and targeted manual fixes for
issues that require human interven

--- a/.github/workflows/code-quality.yml
+++ b/.github/workflows/code-quality.yml
@@ -107,7 +107,11 @@ jobs:
         echo "📊 Code Quality Analysis Summary"
         echo "================================"
         echo "✅ SonarCloud: Analysis completed"
-        echo "$(if [[ -n "${{ secrets.CODACY_API_TOKEN }}" ]]; then echo '✅ Codacy: Analysis completed'; else echo '⚠️  Codacy: Skipped (token not configured)'; fi)"
+        if [[ -n "${{ secrets.CODACY_API_TOKEN }}" ]]; then
+          echo "✅ Codacy: Analysis completed"
+        else
+          echo "⚠️  Codacy: Skipped (token not configured)"
+        fi
         echo ""
         echo "🔗 View Results:"
         echo "   SonarCloud: https://sonarcloud.io/project/overview?id=marcusquinn_ai-assisted-dev-ops"
