🏆 RESTORE COMPREHENSIVE BADGES & SECURITY CLEANUP
✅ BADGE RESTORATION & REPOSITORY SECURITY IMPROVEMENTS:

🏆 **COMPREHENSIVE BADGE COLLECTION RESTORED:**

**Quality & Build Status (6 badges):**
- GitHub Actions workflow status
- SonarCloud quality gate (A-grade ratings)
- CodeFactor maintainability score (A+)
- Qlty maintainability tracking
- Codacy integration status
- CodeRabbit AI-powered reviews

**License & Legal (2 badges):**
- MIT License specification
- Copyright attribution (Marcus Quinn 2025)

**GitHub Community Stats (3 badges):**
- Stars, forks, and watchers (social proof)
- Community engagement metrics

**Release & Version Info (3 badges):**
- Latest release version
- Release date tracking
- Commits since last release

**Repository Statistics (4 badges):**
- Repository size
- Lines of code (18,000+)
- Language count and top language
- Technical complexity metrics

**Community & Development (4 badges):**
- Open and closed issues
- Pull requests status
- Contributors count
- Development activity

**Framework-Specific Capabilities (5 badges):**
- Services supported (25+)
- AGENTS.md compliance
- AI optimization status
- MCP servers count (10)
- API integrations (25+)

🔒 **REPOSITORY SECURITY IMPROVEMENTS:**

**Backups Folder Removal:**
- Removed backups/ directory from public repository
- Prevents potential exposure of sensitive backup data
- Follows security best practices for public repos

**Enhanced .gitignore:**
- Added backups/ directory exclusion
- Added *.backup and *.bak file patterns
- Prevents accidental backup file commits
- Maintains clean repository structure

📊 **OPTIMIZED README METRICS:**

**Final Statistics:**
- **385 lines** (restored from 351 with badges)
- **Still 49% smaller** than original 750+ lines
- **34 comprehensive badges** showing all capabilities
- **Professional presentation** with complete status overview

**Content Balance Achieved:**
- **Comprehensive badge collection** for immediate capability overview
- **Streamlined con

--- a/.gitignore
+++ b/.gitignore
@@ -131,6 +131,11 @@ tmp.*.json
 reports/
 .scannerwork/
 
+# Backups (should not be in public repos)
+backups/
+*.backup
+*.bak
+
 # Test files (keep examples in examples/ directory)
 test-*.txt
 test-*.json
