🔄 CLEANUP: Complete ai-assisted-devops to aidevops rename
🎯 FINAL CLEANUP COMPLETION:
- Renamed config directory: ~/.config/ai-assisted-devops → ~/.config/aidevops
- Updated API key storage path in setup-local-api-keys.sh
- Updated all remaining file content references
- Updated home directory AGENTS.md and README.md files
- Fixed GitHub workflow references

📁 DIRECTORY CHANGES:
- Config directory: ~/.config/aidevops (API keys preserved)
- All scripts now reference new directory structure
- Template files updated for future deployments

🔧 FILES UPDATED:
- .agent/scripts/setup-local-api-keys.sh: Updated storage path
- .agent/scripts/qlty-cli.sh: Updated references
- .github/workflows/code-quality.yml: Updated config path
- Multiple documentation files: Updated all references
- Template files: Updated for consistency

✅ VERIFICATION COMPLETE:
- Zero remaining ai-assisted-devops references found
- API key functionality tested and working
- All file paths and directory structures aligned
- Home directory files updated consistently

🎉 RENAME PROJECT COMPLETE:
- Repository: marcusquinn/aidevops
- Local directory: ~/Git/aidevops
- Config directory: ~/.config/aidevops
- All internal references: aidevops
- Functionality: 100% preserved

The complete migration from ai-assisted-devops to aidevops is now finished with full consistency across all files, directories, and references.

--- a/.github/workflows/code-quality.yml
+++ b/.github/workflows/code-quality.yml
@@ -67,7 +67,7 @@ jobs:
         # Security check - ensure no obvious API keys in repository
         echo ""
         echo "🔐 Security Validation:"
-        echo "✅ API keys stored securely in local storage (~/.config/ai-assisted-devops/)"
+        echo "✅ API keys stored securely in local storage (~/.config/aidevops/)"
         echo "✅ GitHub Actions use repository secrets (SONAR_TOKEN, CODACY_API_TOKEN)"
         echo "✅ Private scripts directory (.agent/scripts-private/) gitignored"
         echo "✅ Security documentation and best practices implemented"
