--- a/.github/workflows/code-quality.yml
+++ b/.github/workflows/code-quality.yml
@@ -93,7 +93,7 @@ jobs:
         if [[ -n "${{ secrets.CODACY_API_TOKEN }}" ]]; then
           echo "🔍 Codacy Analysis Status..."
           echo "✅ Codacy API Token: Configured"
-          echo "📊 Repository monitored at: https://app.codacy.com/gh/marcusquinn/ai-assisted-dev-ops"
+          echo "📊 Repository monitored at: https://app.codacy.com/gh/marcusquinn/aidevops"
           echo "🔧 Local CLI available for auto-fix: codacy-cli analyze --fix"
           echo "⚡ Web-based analysis: Automatic on every commit"
           echo "✅ Codacy integration: Active"
@@ -114,7 +114,7 @@ jobs:
         fi
         echo ""
         echo "🔗 View Results:"
-        echo "   SonarCloud: https://sonarcloud.io/project/overview?id=marcusquinn_ai-assisted-dev-ops"
-        echo "   Codacy: https://app.codacy.com/gh/marcusquinn/ai-assisted-dev-ops"
+        echo "   SonarCloud: https://sonarcloud.io/project/overview?id=marcusquinn_aidevops"
+        echo "   Codacy: https://app.codacy.com/gh/marcusquinn/aidevops"
         echo ""
         echo "🎯 Code Quality Pipeline: COMPLETE"
