🚀 FEATURE: Add comprehensive Crawl4AI integration v1.9.0
✅ NEW INTEGRATION: Crawl4AI - AI-powered web crawler and scraper
- LLM-ready output with clean markdown generation
- Structured data extraction using CSS selectors and LLM
- Advanced browser control with hooks, proxies, and session management
- High-performance parallel crawling and async operations
- Native MCP support for AI assistants like Claude
- Enterprise features: monitoring dashboard, job queues, webhooks

📁 FILES ADDED:
- providers/crawl4ai-helper.sh - Complete management script
- configs/crawl4ai-config.json.txt - Configuration template
- configs/mcp-templates/crawl4ai-mcp-config.json - MCP server config
- docs/CRAWL4AI.md - Main user documentation
- .agent/wiki/crawl4ai-integration.md - Integration guide
- .agent/spec/crawl4ai-usage.md - AI assistant usage guide
- .agent/links/crawl4ai-resources.md - Resource links
- .agent/scripts/crawl4ai-examples.sh - Practical examples

🔧 FRAMEWORK UPDATES:
- Updated service count: 27+ → 28+ services
- Added new service category: Web Crawling & Data Extraction
- Updated AGENTS.md, BEST-PRACTICES.md, services.md
- Version bump: 1.8.1 → 1.9.0

🎯 CAPABILITIES:
- Web crawling with markdown/HTML/JSON output
- Structured data extraction with custom schemas
- LLM-powered content analysis and summarization
- Screenshot capture and PDF generation
- JavaScript execution on pages
- Batch processing and webhook notifications
- Real-time monitoring dashboard
- Docker deployment with auto-scaling

🤖 AI INTEGRATION:
- MCP server for direct AI assistant access
- REST API for programmatic integration
- Job queue system for asynchronous processing
- WebSocket streaming for real-time results

This integration transforms web data into AI-ready formats, perfect for RAG systems, data pipelines, and AI-powered applications.

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "aidevops-dspy-integration",
-  "version": "1.8.1",
-  "description": "AI DevOps Framework with DSPy and DSPyGround integration",
+  "version": "1.9.0",
+  "description": "AI DevOps Framework with DSPy, DSPyGround, and Crawl4AI integration",
   "main": "index.js",
   "scripts": {
     "dspy:init": "dspyground init",
@@ -14,6 +14,8 @@
   "keywords": [
     "dspy",
     "dspyground",
+    "crawl4ai",
+    "web-scraping",
     "ai",
     "devops",
     "prompt-optimization",
