🤖 FEATURE: Add comprehensive CapSolver integration for CAPTCHA solving
✅ CAPSOLVER INTEGRATION COMPLETE:
- Automated CAPTCHA solving with 99.9% success rate
- Support for 10+ CAPTCHA types including reCAPTCHA, Cloudflare, AWS WAF
- Cost-effective pricing starting from zsh.4/1000 requests
- Fast response times (< 10 seconds for most types)

🔧 NEW CAPABILITIES:
- capsolver-setup: Complete CapSolver integration setup
- captcha-crawl: Crawl URLs with automatic CAPTCHA solving
- Python SDK integration with comprehensive examples
- Browser extension support for automatic detection

📊 SUPPORTED CAPTCHA TYPES:
- reCAPTCHA v2/v3 (including Enterprise) - zsh.5-3/1000
- Cloudflare Turnstile & Challenge - /1000
- AWS WAF bypass - Contact pricing
- GeeTest v3/v4 - zsh.5/1000
- Image-to-Text OCR - zsh.4/1000

🛠️ INTEGRATION METHODS:
- API Integration: Direct Python SDK (recommended)
- Browser Extension: Automatic detection and solving
- MCP Tools: solve_captcha, crawl_with_captcha, check_captcha_balance

📁 FILES ADDED/UPDATED:
- providers/crawl4ai-helper.sh: Added CapSolver commands and functions
- configs/crawl4ai-config.json.txt: Added CAPTCHA solving configuration
- configs/mcp-templates/crawl4ai-mcp-config.json: Added CAPTCHA MCP tools
- configs/capsolver-config.json: Comprehensive CapSolver configuration
- configs/capsolver-example.py: Python integration examples
- .agent/wiki/capsolver-integration.md: Complete integration guide
- docs/CRAWL4AI.md: Updated with CapSolver section
- .agent/scripts/crawl4ai-examples.sh: Added CAPTCHA demo examples
- .agent/links/crawl4ai-resources.md: Added CapSolver resources

🎯 USE CASES ENABLED:
- E-commerce data collection with anti-bot bypass
- Market research from protected sources
- Academic research with large-scale data collection
- SEO & marketing analysis across protected sites

🚀 ENTERPRISE FEATURES:
- Automatic CAPTCHA detection and solving
- Balance monitoring and usage tracking
- Error handling and retry mechanisms
- Package disc

--- a/configs/mcp-templates/crawl4ai-mcp-config.json
+++ b/configs/mcp-templates/crawl4ai-mcp-config.json
@@ -22,7 +22,9 @@
         "javascript_execution",
         "adaptive_crawling",
         "virtual_scroll",
-        "batch_processing"
+        "batch_processing",
+        "captcha_solving",
+        "anti_bot_bypass"
       ],
       "tools": [
         {
@@ -205,6 +207,71 @@
               "default": "load"
             }
           }
+        },
+        {
+          "name": "solve_captcha",
+          "description": "Solve CAPTCHA challenges using CapSolver integration",
+          "parameters": {
+            "url": {
+              "type": "string",
+              "description": "The URL containing the CAPTCHA",
+              "required": true
+            },
+            "captcha_type": {
+              "type": "string",
+              "description": "Type of CAPTCHA to solve",
+              "enum": ["recaptcha_v2", "recaptcha_v3", "turnstile", "aws_waf", "geetest", "image_to_text"],
+              "required": true
+            },
+            "site_key": {
+              "type": "string",
+              "description": "Site key for the CAPTCHA (required for reCAPTCHA and Turnstile)"
+            },
+            "page_action": {
+              "type": "string",
+              "description": "Page action for reCAPTCHA v3",
+              "default": "submit"
+            },
+            "auto_submit": {
+              "type": "boolean",
+              "description": "Automatically submit form after solving CAPTCHA",
+              "default": false
+            }
+          }
+        },
+        {
+          "name": "crawl_with_captcha",
+          "description": "Crawl a URL with automatic CAPTCHA solving",
+          "parameters": {
+            "url": {
+              "type": "string",
+              "description": "The URL to crawl",
+              "required": true
+            },
+            "captcha_config": {
+              "type": "object",
+              "description": "CAPTCHA solving configuration",
+              "properties": {
+                "type": {
+                  "type": "string",
+                  "enum": ["recaptcha_v2", "recaptcha_v3", "turnstile", "aws_waf"]
+                },
+                "site_key": {"type": "string"},
+                "page_action": {"type": "string", "default": "submit"}
+              }
+            },
+            "format": {
+              "type": "string",
+              "description": "Output format",
+              "enum": ["markdown", "html", "text", "json"],
+              "default": "markdown"
+            }
+          }
+        },
+        {
+          "name": "check_captcha_balance",
+          "description": "Check CapSolver account balance and usage statistics",
+          "parameters": {}
         }
       ]
     }
