--- a/configs/mcp-templates/complete-mcp-config.json
+++ b/configs/mcp-templates/complete-mcp-config.json
@@ -29,12 +29,12 @@
       }
     },
     "ahrefs": {
-      "command": "npx",
+      "command": "node",
       "args": [
-        "ahrefs-mcp@latest"
+        "/Users/marcusquinn/Git/aidevops/providers/ahrefs-mcp-wrapper.js"
       ],
       "env": {
-        "AHREFS_API_KEY": "your_ahrefs_api_key_here"
+        "API_KEY": "your_ahrefs_api_key_here"
       }
     },
     "perplexity": {
