Standardize AI assistant config with cross-tool symlinks and consolidate .agent/ structure
- Create symlinks for rules files → AGENTS.md (.cursorrules, .windsurfrules, CLAUDE.md, GEMINI.md, AGENT.md, .continuerules)
- Create symlinks for agent folders → .agent/ (.opencode/agent, .claude/commands, .claude/skills, .codex/prompts, .cursor/rules, .factory/skills, .continue, .kiro, .ai)
- Add OpenCode custom tool definitions (.opencode/tool/*.ts) wrapping .agent/scripts/
- Consolidate .agent/ by moving 25 .md files from subdirectories to root
- Move development scripts from .agent/scripts/development/ to .agent/scripts/
- Fix duplicate timestamp line in system-cleanup.sh
- Fix hardcoded path in setup-mcp-integrations.sh (use $HOME instead)
- Update .gitignore for AI tool symlink tracking

--- a/.gitignore
+++ b/.gitignore
@@ -163,3 +163,24 @@ test-*.yaml
 
 #Ignore vscode AI rules
 .github/instructions/codacy.instructions.md
+
+# AI Tool Symlinks - Track these (they point to .agent and AGENTS.md)
+# Rules file symlinks -> AGENTS.md
+!.cursorrules
+!.windsurfrules
+!.continuerules
+!CLAUDE.md
+!GEMINI.md
+!AGENT.md
+
+# Agent/skills folder symlinks -> .agent
+!.opencode/
+!.claude/
+!.codex/
+!.cursor/
+!.factory/
+!.gemini/
+!.continue
+!.kiro
+!.ai
+!.qoder/
