Fix naming: Greptile → Grep by Vercel (grep.app)
- Rename greptile.json → grep-vercel.json template
- Update setup-mcp-integrations.sh references
- Fix README and CHANGELOG naming

--- a/configs/mcp-templates/grep-vercel.json
+++ b/configs/mcp-templates/grep-vercel.json
@@ -6,7 +6,7 @@
       "enabled": true
     }
   },
-  "description": "Greptile (Grep by Vercel) MCP - Search code snippets across GitHub repositories",
+  "description": "Grep by Vercel MCP - Search code snippets across GitHub repositories",
   "documentation": "https://grep.app",
   "usage": {
     "prompt_examples": [
