Security: remove exposed API key, simplify config gitignore pattern
SECURITY:
- Remove updown-config.json with exposed API key from tracking
- API key j6quemmwzx7b9gg49tzq should be rotated immediately

CONFIG CLEANUP:
- Simplify gitignore: configs/*.json (ignore all) + !configs/*.json.txt (allow templates)
- Remove 9 tracked .json files that were templates (not real configs)
- Create .json.txt templates for agno, capsolver, updown
- The .json.txt extension allows macOS spacebar preview

Pattern: .json.txt = safe templates (tracked), .json = user configs (gitignored)

--- a/.gitignore
+++ b/.gitignore
@@ -1,32 +1,13 @@
 # Security - Never commit sensitive information
-# Protect actual config files with real credentials
-configs/hostinger-config.json
-configs/hetzner-config.json
-configs/closte-config.json
-configs/cloudron-config.json
-configs/coolify-config.json
-configs/ses-config.json
-configs/spaceship-config.json
-configs/101domains-config.json
-configs/mainwp-config.json
-configs/vaultwarden-config.json
-configs/code-audit-config.json
-configs/codacy-config.json
-configs/git-platforms-config.json
-configs/dns-config.json
-configs/localhost-config.json
-configs/mcp-servers-config.json
-configs/cloudflare-dns-config.json
-configs/namecheap-dns-config.json
-configs/route53-dns-config.json
-configs/other-dns-providers-config.json
-configs/context7-mcp-config.json
-configs/setup-wizard-responses.json
-configs/dspy-config.json
-configs/dspyground-config.json
+# Ignore ALL .json config files (may contain credentials)
+# Templates use .json.txt extension and are safe to commit
+configs/*.json
 
-# Allow template files and agent directory to be committed
-!configs/*.txt
+# Allow template files (.json.txt) to be committed for spacebar preview
+!configs/*.json.txt
+!configs/mcp-templates/
+
+# Allow agent directory to be committed
 !.agent/
 
 # Password files and credentials
