Fix CodeRabbit and Codacy review issues
- Consolidate .coderabbit.yaml trigger comments per Gemini feedback
- Fix ShellCheck SC2148/SC2155 violations in error-checking-feedback-loops.md
- Add language identifiers to all fenced code blocks (MD040)
- Add blank lines around fenced code blocks (MD031)
- Update .markdownlint.json to disable overly strict MD060/MD032 rules
- Fix nested code block issues in code-review.md
- Standardize markdown formatting across all workflow files

--- a/.coderabbit.yaml
+++ b/.coderabbit.yaml
@@ -96,5 +96,4 @@ path_filters:
     - "*.log"
     - "*.tmp"
 
-# Full review trigger - updated 2024-11-29
-# This comment triggers a comprehensive codebase review
+# Trigger for comprehensive codebase review
