--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -16,8 +16,8 @@ sonar.sourceEncoding=UTF-8
 # Exclusions - files and directories to exclude from analysis
 sonar.exclusions=**/*.txt,**/tmp/**,**/logs/**,.git/**,**/*.json
 
-# Coverage exclusions (shell scripts and docs don't have traditional coverage)
-sonar.coverage.exclusions=**/*.sh,**/*.md,**/*.json,**/*.yml,**/*.yaml
+# Coverage exclusions (shell scripts, docs, and example files don't have traditional coverage)
+sonar.coverage.exclusions=**/*.sh,**/*.md,**/*.json,**/*.yml,**/*.yaml,configs/**/*.py,**/example*.py,**/*-example.py
 
 # Duplication exclusions for configuration templates and documentation
 sonar.cpd.exclusions=configs/**/*.txt,.agent/**/*.md,templates/**/*.md
