--- a/.github/workflows/update-website-docs.yml
+++ b/.github/workflows/update-website-docs.yml
@@ -73,6 +73,7 @@ jobs:
               <meta property="og:image" content="https://aidevops.sh/og-image.png">
               <meta property="og:site_name" content="AI DevOps">
               <meta property="og:locale" content="en_US">
+              <meta property="og:logo" content="https://aidevops.sh/og-image.png">
               
               <!-- Twitter -->
               <meta name="twitter:card" content="summary_large_image">
