chore: remove symlinks causing duplicate @ refs in OpenCode
- Remove .ai, .kiro, .continue symlinks from repo
- Update .gitignore to ignore these symlink names
- Add AI Tool Configuration section to AGENTS.md documenting
  how different AI tools should access agents
- Canonical location: ~/.aidevops/agents/ (deployed by setup.sh)

--- a/.gitignore
+++ b/.gitignore
@@ -173,10 +173,13 @@ test-*.yaml
 !.cursor/
 !.factory/
 !.gemini/
-!.continue
-!.kiro
-!.ai
 !.qoder/
+
+# Symlinks that cause duplicate @ references in OpenCode - removed from repo
+# Other AI tools should use ~/.aidevops/agents/ (deployed location)
+.ai
+.kiro
+.continue
 
 # Superset local config
 .superset/
